EJERCICIO TERMINADO: añadir comentarios en el controller, quitar imports. Añadir la ocpion de clickear el coche en la tabla y se settean los datos

--- a/Tema3_AccesoBDNoSQL_MongoDB/PracticaMongoDB_GestionCoches/EstelaDeVega_EjercicioCrudGestionCoche/src/main/resources/ui/Styles.css
+++ b/Tema3_AccesoBDNoSQL_MongoDB/PracticaMongoDB_GestionCoches/EstelaDeVega_EjercicioCrudGestionCoche/src/main/resources/ui/Styles.css
@@ -62,6 +62,13 @@
     -fx-text-fill: #171664;
 }
 
+/* ESTILO PARA EL LABEL DE COCHES V5 */
+#cochesV5 {
+    -fx-font-family: "Britannic Bold";
+    -fx-font-size: 15px;
+    -fx-text-fill: #9f94df;
+}
+
 
 /************************** COMBOBOX *********************/
 .combo-box {
