--- a/Tema4_MapeoObjetoRelacional_Hibernate/MultiDBManagerFX/src/main/resources/ui/Coche.fxml
+++ b/Tema4_MapeoObjetoRelacional_Hibernate/MultiDBManagerFX/src/main/resources/ui/Coche.fxml
@@ -14,9 +14,8 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="487.0"
-            prefWidth="867.0" styleClass="anchor-pane" stylesheets="@Styles.css" xmlns="http://javafx.com/javafx/22"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.multidbmanagerfx.Controller.CocheCtrller">
+            prefWidth="867.0" styleClass="anchor-pane" stylesheets="@Styles.css" xmlns="http://javafx.com/javafx/19"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.multidbmanagerfx.Controller.CocheCtrller">
     <children>
         <Label layoutX="29.0" layoutY="82.0" styleClass="estiloLabel" text="Matricula">
             <font>
